fix searchfield alignment of icons and visiblity of close icon when hovering

--- a/src/themes/theme-classic-light.scss
+++ b/src/themes/theme-classic-light.scss
@@ -14,9 +14,7 @@
 // Local vars
 @import '../core/config';
 
-$header-toolbar-searchfield-icon-color: $ids-color-palette-white;
 $header-toolbar-button-hover-color: transparent;
-
 $header-tab-normal-color: rgba($ids-color-palette-white, 0.7);
 $header-tab-hover-color: $ids-color-palette-white;
 
